--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phalcon/breadcrumbs": "^1.4"
+        "phalcon/breadcrumbs": "^1.4",
+        "mobiledetect/mobiledetectlib": "^2.8"
     }
 }
